fixed background image not showing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 .top{
-  background-image: url('/resources/images/bg1.png');
+  background-image: url('../images/background.jpg');
 }
 
 .top h1{
